--- a/css/mediaQure.css
+++ b/css/mediaQure.css
@@ -9,11 +9,12 @@
         display: none;
     }
 
-    #MsTrailer, #trailerIcon {
+    #MsTrailer,
+    #trailerIcon {
         display: none;
-    } 
+    }
 
-    #mainLogo a{
+    #mainLogo a {
         display: none;
     }
 
