--- a/css/style.css
+++ b/css/style.css
@@ -173,3 +173,78 @@ h3 {
 #animatedImage {
     display: none;
 }
+
+/*so the carosel..*/
+
+.carousel {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    margin: 0 auto;
+}
+
+.carousel-content {
+    position: relative;
+    overflow: hidden;
+    transition: width .4s;
+    height: 100%;
+}
+
+.slide {
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    z-index: 1;
+    transition: left .4s cubic-bezier(.47, .13, .15, .89);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide > img {
+    height: 80%;
+    margin: 10px;
+}
+
+.slide-2 {
+    background-color: green;
+}
+
+.slide-3 {
+    background-color: red;
+}
+
+.slide-4 {
+    background-color: purple;
+}
+
+.slide-5 {
+    background-color: yellow;
+}
+
+.nav {
+    position: absolute;
+    top: 45%;
+    margin-top: -10px;
+    background-color: rgba(150, 150, 150, .3);
+    width: 40px;
+    height: 40px;
+    z-index: 2;
+    cursor: pointer;
+    border-radius: 25%;
+    border: none;
+    outline: none;
+    color: white;
+    -webkit-user-select: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-left {
+    left: 10px;
+}
+
+.nav-right {
+    right: 10px;
+}
