--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,6 @@ h3 {
 
 .slide {
     height: 100%;
-    background-color: black;
     position: absolute;
     z-index: 1;
     transition: left .4s cubic-bezier(.47, .13, .15, .89);
@@ -206,20 +205,12 @@ h3 {
     margin: 10px;
 }
 
+.slide-1 {
+    background-color: burlywood;
+}
+
 .slide-2 {
-    background-color: green;
-}
-
-.slide-3 {
-    background-color: red;
-}
-
-.slide-4 {
-    background-color: purple;
-}
-
-.slide-5 {
-    background-color: yellow;
+    background-color: rgb(157, 116, 210);
 }
 
 .nav {
