--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,6 @@ h3 {
 }
 
 .heroSection {
-    background-color: aquamarine;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
@@ -174,7 +173,7 @@ h3 {
     display: none;
 }
 
-/*so the carosel..*/
+/* so the carosel.*/
 
 .carousel {
     position: relative;
@@ -188,6 +187,7 @@ h3 {
     overflow: hidden;
     transition: width .4s;
     height: 100%;
+    border-radius: 22px;
 }
 
 .slide {
